Fixed header z-index

--- a/9-lecture-homework/css/style.css
+++ b/9-lecture-homework/css/style.css
@@ -35,6 +35,7 @@ body {
 	box-sizing: border-box;
 	position: sticky;
 	top: 0;
+	z-index: 1;
 }
 
 .header__logo {
